--- a/.github/workflows/Public Release.yaml
+++ b/.github/workflows/Public Release.yaml
@@ -31,6 +31,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt -t ./lib
           zip -r Flow.Launcher.Plugin.Snippets.zip . -x '*.git*'
+      - name: Create Git tag
+        run: |
+          version=${{steps.version.outputs.prop}
+          git tag -a "v$version" -m "Release: v$version"
+          git push origin "v$version"
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
