feat:[Fermi] add git tag step

--- a/.github/workflows/Public Release.yaml
+++ b/.github/workflows/Public Release.yaml
@@ -35,7 +35,7 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
