--- a/.github/workflows/Public Release.yaml
+++ b/.github/workflows/Public Release.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Add Tag
         uses: Klemensas/action-autotag@stable
         with:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          version: "${{ steps.version.outputs.prop }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          version: ${{ steps.version.outputs.prop }}
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
