--- a/.github/workflows/Public Release.yaml
+++ b/.github/workflows/Public Release.yaml
@@ -32,10 +32,10 @@ jobs:
           pip install -r ./requirements.txt -t ./lib
           zip -r Flow.Launcher.Plugin.Snippets.zip . -x '*.git*'
       - name: Add Tag
-        uses: Klemensas/action-autotag@stable
+        uses: mathieudutour/github-tag-action@v6.1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          version: ${{ steps.version.outputs.prop }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: "v${{steps.version.outputs.prop}}"
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
