--- a/.github/workflows/Public Release.yaml
+++ b/.github/workflows/Public Release.yaml
@@ -35,6 +35,8 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: false
+          tag_prefix: ""
           custom_tag: "v${{steps.version.outputs.prop}}"
       - name: Publish
         uses: softprops/action-gh-release@v1
