--- a/.github/workflows/Public Release.yaml
+++ b/.github/workflows/Public Release.yaml
@@ -32,12 +32,11 @@ jobs:
           pip install -r ./requirements.txt -t ./lib
           zip -r Flow.Launcher.Plugin.Snippets.zip . -x '*.git*'
       - name: Add Tag
-        uses: mathieudutour/github-tag-action@v6.1
+        uses: rickstaa/action-create-tag@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: false
-          tag_prefix: ""
-          custom_tag: "v${{steps.version.outputs.prop}}"
+          tag: "v${{steps.version.outputs.prop}}"
+          tag_exists_error: false
+          message: "Latest release"
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
